# Brainfuck-Compiler

./: CMakeLists.txt  README.md  ersFreungit status
example/: main.c  mandelbrot.asm
src/: codegen.c  codegen.h  compiler.c  compiler.h  ir.c  ir.h  main.c  preprocessor.c  preprocessor.h  stack.c  stack.h  util.c  util.h
